cif/org.eclipse.escet.cif.tests/tests/checks/EdgeNoIfUpdatesCheck.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  ------------------------------
  (1/1) Edge has an 'if' update.
  ------------------------------
   * In location "a.l5":
     - edge e do if true: va := 1 end goto l6;
                 ^
   * In location "a.l6":
     - edge e do if true: (va, vb) := (1, 2) end goto l7;
                 ^
   * In location "a.l7":
     - edge e do if true: li[0] := 1 end goto l8;
                 ^
   * In location "a.l8":
     - edge e do if true: if true: va := 1 end end goto l9;
                 ^        ^
   * In automaton "all":
     - edge e do if true: va := 1 end;
                 ^
     - edge e do if true: va := 1 end;
                 ^
   * In location "g.A.l5":
     - edge e do if true: va := 1 end goto l1;
                 ^
   * In automaton "if_upd":
     - edge e do if true: v := 1 end;
                 ^
     - edge e do if true: if true: v := 1 end end;
                 ^        ^
   * In automaton "multi_asgn":
     - edge e do if true: (va, vb) := (1, 2) end;
                 ^
   * In automaton "partial_asgn":
     - edge e do if true: li[0] := 1 end;
                 ^
